--- a/public/views/layout_head.html.erb
+++ b/public/views/layout_head.html.erb
@@ -1,1 +1,11 @@
 <%= stylesheet_link_tag "#{@base_url}/assets/stylesheets/local.css" %>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="<%= "https://www.googletagmanager.com/gtag/js?id=#{AppConfig[:google_analytics_key]}" %>"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', "<%= AppConfig[:google_analytics_key] %>");
+</script>
